--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,7 @@ body{
 .nav-link{
     font-size: 14px;
 }
-.btn-tomato{
-    background-color: tomato;
-}
+
 .hcard-icon{
     color: tomato;
 }
@@ -22,4 +20,20 @@ body{
     font-size: 13px;
     color: #8a8a8a;
     text-align: justify;
+}
+.card{
+    box-shadow: 0 0 35px -5px rgba(0, 0, 0, 0.3);
+}
+.card-link{
+    text-decoration: none;
+    position: relative;
+    overflow: hidden;
+}
+.card-img-top{
+    transform: scale(1);
+    transition: transform .2s linear;
+}
+.card-img-top:hover{
+    transform: scale(1.05);
+    transition: transform .3s linear;
 }
