--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,16 @@ body{
 .nav-link{
     font-size: 14px;
 }
-
+.btn-tomato{
+    color: white;
+    background-color: tomato;
+    border: 2px solid tomato;
+}
+.btn-tomato:hover{
+    color: tomato;
+    background-color: transparent;
+    border: 2px solid tomato;
+}
 .hcard-icon{
     color: tomato;
 }
