--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,22 @@
 /* google font css */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-body{
-    font-family: 'Montserrat', sans-serif;
+
+
+/* ---------- common css start ---------- */
+*{
+    margin: 0;
+    padding: 0;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+/* ---------- common css end ---------- */
+
+/* ---------- nav css start ---------- */
 .nav-link{
     font-size: 14px;
 }
@@ -18,6 +30,9 @@ body{
     background-color: transparent;
     border: 2px solid tomato;
 }
+/* ---------- nav css end ---------- */
+
+/* ---------- vertical card css start ---------- */
 .hcard-icon{
     color: tomato;
 }
@@ -30,6 +45,10 @@ body{
     color: #8a8a8a;
     text-align: justify;
 }
+/* ---------- vertical card css end ---------- */
+
+
+/* ---------- card css start ---------- */
 .card{
     box-shadow: 0 0 35px -5px rgba(0, 0, 0, 0.3);
 }
@@ -46,3 +65,4 @@ body{
     transform: scale(1.05);
     transition: transform .3s linear;
 }
+/* ---------- card css end ---------- */
