--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,9 @@ body{
 }
 /* ---------- card css end ---------- */
 
-/* .footer-btn{
-    width: fit-content;
-} */
+.footer-heading{
+    width: 60%;
+}
 
 
 
